welcome.lessons.welcome.summative.Moria.scala.error
DwarfCode:1: error: not found: value Direction
setDirection(Direction.EST)
             ^DwarfCode:7: error: not found: value Direction
  setDirection(Direction.OUEST)
               ^DwarfCode:13: error: not found: value Direction
  setDirection(Direction.EST)
               ^