welcome.lessons.welcome.summative.Moria.scala.code
setDirection(Direction.EST)
while (!estFaceMur()) {
  while (!estSurBiscuit()) {
    avance()
  }
  prendBiscuit()
  setDirection(Direction.OUEST)
  while (!estSurBiscuit()) {
    avance()
  }
  recule()
  poseBiscuit()
  setDirection(Direction.EST)
}
droite()
avance()
gauche()
avance()